@@ -88,6 +88,7 @@ dillo-fltk2
  - Fixed a bug in a_Url_cmp.
  - Fixed a bug in Cookies_parse_one. Set it to a single return potint too!
  - Added dStr_memmem() to dlib.
+ - Fixed a decoding bug in the datauri dpi.
    Patches: place
 +- Fixed a problem with locally-installed dpis.
  - Added code for optional image loading (nice interface) very advanced!
